Bugfix + align leaderboard

--- a/styles.css
+++ b/styles.css
@@ -724,6 +724,7 @@ body.players-screen {
 	border-radius: 0;
 	display: flex;
 	flex-direction: column;
+	justify-content: flex-start;
 	padding: 32px 24px;
 	z-index: 10;
 }
@@ -744,7 +745,7 @@ body.players-screen {
 	counter-reset: rank;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-start;
 }
 
 .leaderboard .player {
